Cambio direccion web

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://example.org/"
+baseURL = "https://graficon404.github.io/Senador/"
 languageCode = "es"
 title = "Jorge Solá Jais"
 theme = "jeffprod"
