Con dirección web real

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://graficon404.github.io/Senador/"
+baseURL = "http://jorgesolajais.com.ar/"
 languageCode = "es"
 title = "Jorge Solá Jais"
 theme = "jeffprod"
